--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -63,7 +63,13 @@
 
     <div class="text-end mt-3">
       <h5 id="cart_total">Total: <%= number_to_currency(@current_cart.total_price, unit: "€") %></h5>
-      <%= link_to "🧾 Passer au paiement", "#", class: "btn btn-success px-4 py-2 mt-3" %>
+      <div class="mt-3">
+        <%= link_to "Vider le panier", clear_cart_items_path,
+            method: :delete,
+            data: { turbo_confirm: "Êtes-vous sûr de vouloir vider le panier ?" },
+            class: "btn btn-warning me-2" %>
+        <%= link_to "🧾 Passer au paiement", "#", class: "btn btn-success px-4 py-2" %>
+      </div>
     </div>
   <% else %>
     <div class="alert alert-info text-center mt-4" role="alert">
